Describe your update here

--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,10 @@
       "dest": "/index.html"
     }
   ],
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run vercel-build",
   "outputDirectory": "dist",
-  "framework": "vite"
+  "installCommand": "npm ci",
+  "framework": null,
+  "functions": {},
+  "regions": ["iad1"]
 }
