--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "engines": {
     "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "npm": ">=9.0.0"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --host",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "framer-motion": "^10.16.4",
